# fuel_route

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
fuel_route/: settings.py  urls.py
planner/: city_geocache.json  serializers.py  services.py  tests.py  urls.py  views.py
planner/management/commands/: prebuild_geocache.py
