[project]
name = "fuel-route"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "geopy>=2.4",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "drf-spectacular>=0.27",
]
